adding media 10 showcase

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title>Rob Hern - Front End Web Developer</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/responsivestyle.css"/>
   <link rel="stylesheet" href="css/min/gallerystyle.min.css"/>
   <link rel="stylesheet" href="fonts/pe-icon-social/css/pe-icon-social.css">
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/m10_style.css"/>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="fonts/ow/css/styles.min.css"/>
   <meta name="description" content="Rob Hern's Portfolio. Junior Front-End Web Developer in London, England">
@@ -30,6 +30,10 @@
     <p class="firstnav">Home</p>
     <p class="secondnav fa fa-home"></p>
   </a>
+  <a href="#m10-anchor">
+    <p class="firstnav">Current Work</p>
+    <p class="secondnav fa fa-building-o"></p>
+  </a>
   <a href="#portfolio">
     <p class="firstnav">Portfolio</p>
     <p class="secondnav fa fa-file-code-o"></p>
@@ -49,10 +53,124 @@
         <h1 class="highlight-text">Rob Hern</h1>
         <h2 id="jobtitle">Junior Front End Web Developer</h2>
         <p>I am a Junior Front End Web Developer based in Essex & London. I enjoy building sites with responsive design and sleek user experiences with a focus on the site's content.</p>
-        <p>I am currently working as a Junior Front End Web Developer at <a href="https://www.media-ten.com/" class="highlight-text" target="_blank">Media 10 Ltd</a>.</p>
+        <p>I am currently working as a Junior Front End Web Developer at <a href="#M10" class="highlight-text" >Media 10 Ltd</a>.</p>
         <p>Please check out my <a href="#portfolio" class="highlight-text">Portfolio</a>, and feel free to <a class="highlight-text" href="#contact">get in touch</a> if you like what you see!</p>
       </div>
 </div>
+<div id="m10-anchor"></div>
+<div id="M10" class="slide">
+<div id="m10_header">
+  <h2 class="tiny-header">Current Work Showcase - Media 10 Ltd</h2>
+  <div class="scroll-down svg" id="home-scroll-down">
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_2" x="0px" y="0px" viewBox="0 0 25.166666 37.8704414" enable-background="new 0 0 25.166666 37.8704414" xml:space="preserve">
+        <path class="stroke" fill="none" stroke="#fff" stroke-width="2.5" stroke-miterlimit="10" d="M12.5833445 36.6204414h-0.0000229C6.3499947 36.6204414 1.25 31.5204487 1.25 25.2871208V12.5833216C1.25 6.3499947 6.3499951 1.25 12.5833216 1.25h0.0000229c6.2333269 0 11.3333216 5.0999947 11.3333216 11.3333216v12.7037992C23.916666 31.5204487 18.8166714 36.6204414 12.5833445 36.6204414z"></path>
+        <path class="scroller" fill="#fff" d="M13.0833359 19.2157116h-0.9192753c-1.0999985 0-1.9999971-0.8999996-1.9999971-1.9999981v-5.428606c0-1.0999994 0.8999987-1.9999981 1.9999971-1.9999981h0.9192753c1.0999985 0 1.9999981 0.8999987 1.9999981 1.9999981v5.428606C15.083334 18.315712 14.1833344 19.2157116 13.0833359 19.2157116z"></path>
+    </svg><i class="icon icon-arrow-down"></i>
+</div>
+
+</div>
+
+
+<div id="m10-description">
+  <div id="m10-text">
+    <p>I am currently working at <a href="http://media-ten.com" class="highlight-text" target="_blank">Media 10 Ltd</a> as a Junior Front End Web Developer.</p><p>The role comprises of reskins to existing sites, implementation of new creative campaigns from mockups supplied by studio and day to day upkeep and development of websites for over 45 brands.</p>
+    <p>Please see below for a select showcase of Media 10's brands and my work with the web team.</p>
+  </div>
+</div>
+<div id="m10-vertical-stack-large">
+  <div class="vertical-stacking-large">
+    <a href="http://idealhomeshowchristmas.co.uk/" target="_blank">
+      <div class="vertical-overlay-large">
+        <img src="img/m10/ihsxmas_logo.png" class="vertical-logo-large logo-left" />
+      </div>
+    </a>
+  </div>
+  <div class="vertical-stacking-large">
+    <a href="http://icondesigntrail.com/" target="_blank">
+      <div class="vertical-overlay-large">
+        <img src="img/m10/idt_logo.png" class="vertical-logo-large logo-right" />
+      </div>
+    </a>
+  </div>
+  <div class="vertical-stacking-large">
+    <a href="http://idealhomeshow.co.uk/" target="_blank">
+      <div class="vertical-overlay-large">
+        <img src="img/m10/ihs_spr_logo.png" class="vertical-logo-large logo-left" />
+      </div>
+    </a>
+  </div>
+  <div class="vertical-stacking-large">
+    <a href="http://100percentoptical.com/" target="_blank">
+      <div class="vertical-overlay-large">
+        <img src="img/m10/100-pc-logo.png" class="vertical-logo-large logo-right" />
+      </div>
+    </a>
+  </div>
+  <div class="vertical-stacking-large">
+    <a href="http://ukconstructionweek.com/" target="_blank">
+      <div class="vertical-overlay-large">
+        <img src="img/m10/ukcw-logo.png" class="vertical-logo-large logo-left" />
+      </div>
+    </a>
+  </div>
+  <div class="vertical-stacking-large">
+    <a href="http://granddesignslive.com/" target="_blank">
+      <div class="vertical-overlay-large">
+        <img src="img/m10/gdl-logo.png" class="vertical-logo-large logo-right" />
+      </div>
+    </a>
+  </div>
+  <div class="vertical-stacking-large">
+    <a href="http://constructionsummits.com/" target="_blank">
+      <div class="vertical-overlay-large">
+        <img src="img/m10/cs-logo.png" class="vertical-logo-large logo-left" />
+      </div>
+    </a>
+  </div>
+  <div class="vertical-stacking-large">
+    <a href="http://thebestofbritishshow.cn/" target="_blank">
+      <div class="vertical-overlay-large">
+        <img src="img/m10/bob-logo.png" class="vertical-logo-large logo-right" />
+      </div>
+    </a>
+  </div>
+
+</div><!-- end of m10-vertical-stack-large-->
+
+  <!-- <div id="m10-vertical-stack">
+    <div class="vertical-stacking">
+      <div class="vertical-overlay">
+        <img src="img/m10/ihsxmas_logo.png" class="vertical-logo" />
+      </div>
+    </div>
+    <div class="vertical-stacking">
+      <div class="vertical-overlay">
+        <img src="img/m10/idt_logo.png" class="vertical-logo" />
+      </div>
+    </div>
+    <div class="vertical-stacking">
+      <div class="vertical-overlay">
+        <img src="img/m10/ihs_spr_logo.png" class="vertical-logo" />
+      </div>
+    </div>
+    <div class="vertical-stacking">
+      <div class="vertical-overlay">
+        <img src="img/m10/100-pc-logo.png" class="vertical-logo" />
+      </div>
+    </div>
+    <div class="vertical-stacking">
+      <div class="vertical-overlay">
+        <img src="img/m10/ukcw-logo.png" class="vertical-logo" />
+      </div>
+    </div>
+    <div class="vertical-stacking">
+      <div class="vertical-overlay">
+        <img src="img/m10/gdl-logo.png" class="vertical-logo" />
+      </div>
+    </div>
+  </div>
+
+</div> -->
 
 <div id="portfolio" class="slide">
 <h1 class="slide-header black">Portfolio</h1>
@@ -173,8 +291,8 @@
 
 
   </div><!--end of project-container-->
-    <p id="moresoon">More Coming Soon</p>
-  <hr><!--  END OF INDIVIDUAL PORTFOLIO PIECE  -->
+<!--     <p id="moresoon">More Coming Soon</p>
+  <hr><!--  END OF INDIVIDUAL PORTFOLIO PIECE  --> -->
 
 
 </div><!--end of portfolio-->
@@ -243,6 +361,12 @@
         <div class="progress-bar progress skills-bar"></div>
       </div><!--end of skills-box-->
 
+      <div id="skills-box"><!-- start bar -->
+      <div class="progress-wrap progress skills-wrap" data-progress-percent="75">
+        <p class="skill-identifier">Joomla</p>
+        <div class="progress-bar progress skills-bar"></div>
+      </div><!--end of skills-box-->
+</div>
 
     </div>
 
@@ -266,9 +390,9 @@
     <div class="info-box">
       <p class="info-description">Films Watched</p>
       <p class="info-icon"><i class="fa fa-film" aria-hidden="true"></i></p>
-      <p class="info-total">35</p>
+      <p class="info-total">38</p>
       <p class="info-goal">Goal: 40</p>
-      <div class="progress-wrap progress" data-progress-percent="87.5">
+      <div class="progress-wrap progress" data-progress-percent="90">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -306,9 +430,9 @@
     <div class="info-box">
       <p class="info-description">Live Events</p>
       <p class="info-icon"><i class="fa fa-ticket" aria-hidden="true"></i></p>
-      <p class="info-total">13</p>
+      <p class="info-total">15</p>
       <p class="info-goal">Goal: 15</p>
-      <div class="progress-wrap progress" data-progress-percent="86.66">
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -336,9 +460,9 @@
     <div class="info-box">
       <p class="info-description">Overwatch Level Attained</p>
       <p class="info-icon"><i class="icons8-overwatch"></i></p>
-      <p class="info-total">490</p>
+      <p class="info-total">500</p>
       <p class="info-goal">Goal: 500</p>
-      <div class="progress-wrap progress" data-progress-percent="98">
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -348,7 +472,7 @@
       <p class="info-icon"><i class="fa fa-book" aria-hidden="true"></i></p>
       <p class="info-total">5</p>
       <p class="info-goal">Goal: 6</p>
-      <div class="progress-wrap progress" data-progress-percent="50">
+      <div class="progress-wrap progress" data-progress-percent="80">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -356,9 +480,9 @@
         <div class="info-box">
       <p class="info-description">Road Trips Taken</p>
       <p class="info-icon"><i class="fa fa-car" aria-hidden="true"></i></p>
-      <p class="info-total">1</p>
+      <p class="info-total">3</p>
       <p class="info-goal">Goal: 3</p>
-      <div class="progress-wrap progress" data-progress-percent="83.33">
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -366,9 +490,9 @@
         <div class="info-box">
       <p class="info-description">Netflix Originals Binged</p>
       <p class="info-icon"><i class="fa fa-television" aria-hidden="true"></i></p>
-      <p class="info-total">4</p>
+      <p class="info-total">5</p>
       <p class="info-goal">Goal: 5</p>
-      <div class="progress-wrap progress" data-progress-percent="80">
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -377,8 +501,8 @@
   <footer>Site handmade by Rob Hern ©2017</footer>
 </div><!--end of #about-->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/min/script.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/gallery.js"></script>
 <script src="http://imakewebthings.github.com/jquery-waypoints/waypoints.min.js" type="text/javascript"></script>
 </body>
