--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title>Rob Hern - Front End Web Developer</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css"/>
-  <link rel="stylesheet" href="css/responsivestyle.css"/>
+  <link rel="stylesheet" href="css/min/style.min.css"/>
+  <link rel="stylesheet" href="css/min/responsivestyle.min.css"/>
   <link rel="stylesheet" href="css/min/gallerystyle.min.css"/>
   <link rel="stylesheet" href="fonts/pe-icon-social/css/pe-icon-social.css">
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/m10_style.css"/>
+  <link rel="stylesheet" href="css/min/m10_style.min.css"/>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="fonts/ow/css/styles.min.css"/>
   <meta name="description" content="Rob Hern's Portfolio. Junior Front-End Web Developer in London, England">
@@ -73,7 +73,8 @@
 
 <div id="m10-description">
   <div id="m10-text">
-    <p>I am currently working at <a href="http://media-ten.com" class="highlight-text" target="_blank">Media 10 Ltd</a> as a Junior Front End Web Developer.</p><p>The role comprises of reskins to existing sites, implementation of new creative campaigns from mockups supplied by studio and day to day upkeep and development of websites for over 45 brands.</p>
+    <p>I am currently working at <a href="http://media-ten.com" class="highlight-text" target="_blank">Media 10 Ltd</a> as a Junior Front End Web Developer.</p>
+    <p>The role comprises of reskins to existing sites, implementation of new creative campaigns from mockups supplied by studio and day to day upkeep & development of websites for over 45 brands.</p>
     <p>Please see below for a select showcase of Media 10's brands and my work with the web team.</p>
   </div>
 </div>
@@ -136,41 +137,6 @@
   </div>
 
 </div><!-- end of m10-vertical-stack-large-->
-
-  <!-- <div id="m10-vertical-stack">
-    <div class="vertical-stacking">
-      <div class="vertical-overlay">
-        <img src="img/m10/ihsxmas_logo.png" class="vertical-logo" />
-      </div>
-    </div>
-    <div class="vertical-stacking">
-      <div class="vertical-overlay">
-        <img src="img/m10/idt_logo.png" class="vertical-logo" />
-      </div>
-    </div>
-    <div class="vertical-stacking">
-      <div class="vertical-overlay">
-        <img src="img/m10/ihs_spr_logo.png" class="vertical-logo" />
-      </div>
-    </div>
-    <div class="vertical-stacking">
-      <div class="vertical-overlay">
-        <img src="img/m10/100-pc-logo.png" class="vertical-logo" />
-      </div>
-    </div>
-    <div class="vertical-stacking">
-      <div class="vertical-overlay">
-        <img src="img/m10/ukcw-logo.png" class="vertical-logo" />
-      </div>
-    </div>
-    <div class="vertical-stacking">
-      <div class="vertical-overlay">
-        <img src="img/m10/gdl-logo.png" class="vertical-logo" />
-      </div>
-    </div>
-  </div>
-
-</div> -->
 
 <div id="portfolio" class="slide">
 <h1 class="slide-header black">Portfolio</h1>
@@ -460,7 +426,7 @@
     <div class="info-box">
       <p class="info-description">Overwatch Level Attained</p>
       <p class="info-icon"><i class="icons8-overwatch"></i></p>
-      <p class="info-total">500</p>
+      <p class="info-total">500+</p>
       <p class="info-goal">Goal: 500</p>
       <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
