updating job title

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="css/min/m10_style.min.css"/>
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="fonts/ow/css/styles.min.css"/>
-  <meta name="description" content="Rob Hern's Portfolio. Junior Front-End Web Developer in London, England">
-  <meta property="og:title" content="Rob Hern. Junior Front-End Web Developer. London, England.">
+  <meta name="description" content="Rob Hern's Portfolio. Front-End Web Developer in London, England">
+  <meta property="og:title" content="Rob Hern. Front-End Web Developer. London, England.">
   <meta property="og:image" content="img/favicon.png">
   <meta property="site_name" content="Rob Hern | Junior Front End Web Developer">
   <meta name="twitter:site" content="@robhern">
@@ -51,9 +51,9 @@
 <div id="home" class="slide">
       <div id="headings-section">
         <h1 class="highlight-text">Rob Hern</h1>
-        <h2 id="jobtitle">Junior Front End Web Developer</h2>
-        <p>I am a Junior Front End Web Developer based in Essex & London. I enjoy building sites with responsive design and sleek user experiences with a focus on the site's content.</p>
-        <p>I am currently working as a Junior Front End Web Developer at <a href="#M10" class="highlight-text" >Media 10 Ltd</a>.</p>
+        <h2 id="jobtitle">Front End Web Developer</h2>
+        <p>I am a Front End Web Developer based in London. I enjoy building sites with responsive design and sleek user experiences with a focus on the site's content.</p>
+        <p>I am currently working as a Front End Web Developer at <a href="#M10" class="highlight-text" >Media 10 Ltd</a>.</p>
         <p>Please check out my <a href="#portfolio" class="highlight-text">Portfolio</a>, and feel free to <a class="highlight-text" href="#contact">get in touch</a> if you like what you see!</p>
       </div>
 </div>
@@ -73,7 +73,7 @@
 
 <div id="m10-description">
   <div id="m10-text">
-    <p>I am currently working at <a href="http://media-ten.com" class="highlight-text" target="_blank">Media 10 Ltd</a> as a Junior Front End Web Developer.</p>
+    <p>I am currently working at <a href="http://media-ten.com" class="highlight-text" target="_blank">Media 10 Ltd</a> as a Front End Web Developer.</p>
     <p>The role comprises of reskins to existing sites, implementation of new creative campaigns from mockups supplied by studio and day to day upkeep & development of websites for over 45 brands.</p>
     <p>Please see below for a select showcase of Media 10's brands and my work with the web team.</p>
   </div>
