--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   <meta property="og:image" content="img/favicon.png">
   <meta property="site_name" content="Rob Hern | Junior Front End Web Developer">
   <meta name="twitter:site" content="@robhern">
+  <!-- Hotjar Tracking Code for robhern.co.uk -->
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:936109,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
 </head>
 
 <body>
