removing .html extensions

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<!--end portoflio-link-->
 
 			<h4 class="homepage-subheader">-- Media 10 Portfolio --</h4>
-			<a class="portfolio-link gdl left" href="gdl.html">
+			<a class="portfolio-link gdl left" href="gdl">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="Grand Designs Live">Grand Designs Live</h2>
 					<p class="portfolio-desc">Pre-2018 Show Site Merge & Reskin</p>
@@ -173,7 +173,7 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link tml right" href="tml.html">
+			<a class="portfolio-link tml right" href="tml">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="This Morning Live">This Morning Live</h2>
 					<p class="portfolio-desc">Pre-2018 Show Reskin</p>
@@ -196,7 +196,7 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link ukcw left" href="ukcw.html">
+			<a class="portfolio-link ukcw left" href="ukcw">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="UK Construction Week">UK Construction Week</h2>
 					<p class="portfolio-desc">Front End Development</p>
@@ -218,7 +218,7 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link tdh right" href="tdh.html">
+			<a class="portfolio-link tdh right" href="tdh">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="Tom, Dick & Harry's">Tom, Dick & Harry's</h2>
 					<p class="portfolio-desc">Landing Page Build</p>
@@ -243,7 +243,7 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link wkdd left" href="wkdd.html">
+			<a class="portfolio-link wkdd left" href="wkdd">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="West Kensington Design District">West Kensington Design District</h2>
 					<p class="portfolio-desc">Site Design</p>
@@ -400,7 +400,7 @@
 					<span class="lines line-2"></span>
 					<span class="lines line-3"></span>
 				</label>
-				<a href="index.html#homepage" class="menu-item"> <i class="fas fa-home"></i>
+				<a href="index#homepage" class="menu-item"> <i class="fas fa-home"></i>
 				</a>
 				<a href="https://www.linkedin.com/in/roberthern/" target="_blank" class="menu-item"> <i class="fab fa-linkedin-in"></i> 
 				</a>
@@ -408,9 +408,9 @@
 				</a>
 				<a href="http://github.com/robhern135" target="_blank" class="menu-item"> <i class="fab fa-github"></i> 
 				</a>
-				<a href="index.html#about" class="menu-item"> <i class="fas fa-user-circle"></i> 
+				<a href="index#about" class="menu-item"> <i class="fas fa-user-circle"></i> 
 				</a>
-				<a href="index.html#portfolio" class="menu-item"> <i class="fas fa-file-code"></i> 
+				<a href="index#portfolio" class="menu-item"> <i class="fas fa-file-code"></i> 
 				</a>
 			</nav>
 		</section>
