--- a/ukcw.html
+++ b/ukcw.html
@@ -100,7 +100,7 @@
     </section>
 
   <section class="backToPortfolio">
-      <p><a href="index.html#portfolio">Back to Portfolio</a></p>
+      <p><a href="index#portfolio">Back to Portfolio</a></p>
     </section>
 
     </div>
@@ -114,13 +114,13 @@
       <span class="lines line-3"></span>
     </label>
 
-    <a href="index.html#homepage" class="menu-item"> <i class="fas fa-home"></i> </a>
+    <a href="index#homepage" class="menu-item"> <i class="fas fa-home"></i> </a>
     <a href="https://www.linkedin.com/in/roberthern/" target="_blank" class="menu-item"> <i class="fab fa-linkedin-in"></i> </a>
     <a href="mailto:robertjhern@gmail.com" class="menu-item"> <i class="far fa-envelope"></i> </a>
     <a href="http://github.com/robhern135" target="_blank" class="menu-item"> <i class="fab fa-github"></i> </a>
 
-    <a href="index.html#about" class="menu-item"> <i class="fas fa-user-circle"></i> </a>
-    <a href="index.html#portfolio" class="menu-item"> <i class="fas fa-file-code"></i> </a>
+    <a href="index#about" class="menu-item"> <i class="fas fa-user-circle"></i> </a>
+    <a href="index#portfolio" class="menu-item"> <i class="fas fa-file-code"></i> </a>
   </nav>
 </section>
 
