--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<!--end portoflio-link-->
 
 			<h4 class="homepage-subheader">-- Media 10 Portfolio --</h4>
-			<a class="portfolio-link gdl left" href="gdl">
+			<a class="portfolio-link gdl left" href="grand-designs-live">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="Grand Designs Live">Grand Designs Live</h2>
 					<p class="portfolio-desc">Pre-2018 Show Site Merge & Reskin</p>
@@ -173,7 +173,7 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link tml right" href="tml">
+			<a class="portfolio-link tml right" href="this-morning-live">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="This Morning Live">This Morning Live</h2>
 					<p class="portfolio-desc">Pre-2018 Show Reskin</p>
@@ -196,7 +196,7 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link ukcw left" href="ukcw">
+			<a class="portfolio-link ukcw left" href="uk-construction-week">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="UK Construction Week">UK Construction Week</h2>
 					<p class="portfolio-desc">Front End Development</p>
@@ -218,7 +218,7 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link tdh right" href="tdh">
+			<a class="portfolio-link tdh right" href="tom-dick-and-harrys">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="Tom, Dick & Harry's">Tom, Dick & Harry's</h2>
 					<p class="portfolio-desc">Landing Page Build</p>
@@ -243,7 +243,7 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link wkdd left" href="wkdd">
+			<a class="portfolio-link wkdd left" href="west-kensington-design-district">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="West Kensington Design District">West Kensington Design District</h2>
 					<p class="portfolio-desc">Site Design</p>
