adding portfolio project

--- a/index.html
+++ b/index.html
@@ -132,7 +132,28 @@
 			</div>
 			<!--end portoflio-link-->
 
-			<div class="portfolio-link bacon right" href="https://robhern135.github.io/bacon-ipsum-generator/">
+			<div class="portfolio-link portsite right" href="https://github.com/robhern135/my-portfolio">
+				<div class="fig-caption col-md-6 col-sm-12">
+					<h2 class="port-title" data-hover="This Portfolio!">This Portfolio!</h2>
+					<p class="portfolio-desc-proj">This very site you're on.</p>
+					<div class="portfolio-tags">
+						<span>HTML/CSS</span>
+						<span>Javascript/JQuery</span>
+						<span>SASS/SCSS</span>
+						<span>Materialize/Bootstrap Framework</span>
+						<a href="https://gijsroge.github.io/tilt.js/" target="_blank">Tilt.js</a>
+						<a href="http://jquery.eisbehr.de/lazy/" target="_blank">jQuery Lazy</a>
+					</div>
+					<button class="viewMoreBtn personalbtn white"><a href="https://github.com/robhern135/my-portfolio" target="_blank">View Repo</a></button>
+				</div>
+				<!--end fig-caption-->
+				<figure class="float-right col-md-6 col-sm-12">
+					<img src="img/projects/portfolio-2018.png" />
+				</figure>
+			</div>
+			<!--end portoflio-link-->
+
+			<div class="portfolio-link bacon left" href="https://robhern135.github.io/bacon-ipsum-generator/">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="Bacon Text Generator">Bacon Text Generator</h2>
 					<p class="portfolio-desc-proj">ReactJS App using BaconIpsum API & Material UI</p>
@@ -148,7 +169,7 @@
 					<button class="viewMoreBtn personalbtn white"><a href="https://github.com/robhern135/bacon-ipsum-generator/" target="_blank">View Repo</a></button>
 				</div>
 				<!--end fig-caption-->
-				<figure class="float-right col-md-6 col-sm-12">
+				<figure class="float-left col-md-6 col-sm-12">
 					<img src="img/projects/react-bacon.png" />
 				</figure>
 			</div>
@@ -417,11 +438,11 @@
 		<!--JQUERY-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<!-- Latest compiled and minified Bootstrap JavaScript -->
-		<script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<!-- Compiled and minified Materialize JavaScript -->
-		<script async src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-		<script async type="text/javascript" src="script/tilt.js-master/src/tilt.jquery.js"></script>
-		<script async type="text/javascript" src="script/script.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+		<script type="text/javascript" src="script/tilt.js-master/src/tilt.jquery.js"></script>
+		<script type="text/javascript" src="script/script.js"></script>
 </body>
 
 </html>
