--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<span>HTML/CSS</span>
 						<span>Javascript/JQuery</span>
 						<span>SASS/SCSS</span>
-						<span>Materialize/Bootstrap Framework</span>
+						<span>Materialize/Bootstrap</span>
 						<a href="https://gijsroge.github.io/tilt.js/" target="_blank">Tilt.js</a>
 						<a href="http://jquery.eisbehr.de/lazy/" target="_blank">jQuery Lazy</a>
 					</div>
