--- a/west-kensington-design-district.html
+++ b/west-kensington-design-district.html
@@ -118,14 +118,12 @@
   <!--JQUERY-->  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Latest compiled and minified Bootstrap JavaScript -->
-  <script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <!-- Compiled and minified Materialize JavaScript -->
-  <script async src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-  <!--Rellax Parallax-->
-  <script async src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.6.2/rellax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <!--LAZY LOAD-->
-  <script async type="text/javascript" src="script/jquery.lazy.min.js"></script>
-  <script async type="text/javascript" src="script/jquery.lazy.plugins.min.js"></script>
-  <script async src="script/script.js"></script>
+  <script type="text/javascript" src="script/jquery.lazy.min.js"></script>
+  <script type="text/javascript" src="script/jquery.lazy.plugins.min.js"></script>
+  <script src="script/script.js"></script>
   </body>
 </html>
