remove bacon ipsum

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			</div>
 			<!--end portoflio-link-->
 
-			<div class="portfolio-link bacon left" href="https://robhern135.github.io/bacon-ipsum-generator/">
+			<!-- <div class="portfolio-link bacon left" href="https://robhern135.github.io/bacon-ipsum-generator/">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="Bacon Text Generator">Bacon Text Generator</h2>
 					<p class="portfolio-desc-proj">ReactJS App using BaconIpsum API & Material UI</p>
@@ -168,12 +168,12 @@
 					<button class="viewMoreBtn personalbtn white"><a href="https://robhern135.github.io/bacon-ipsum-generator/" target="_blank">View Live</a></button>
 					<button class="viewMoreBtn personalbtn white"><a href="https://github.com/robhern135/bacon-ipsum-generator/" target="_blank">View Repo</a></button>
 				</div>
-				<!--end fig-caption-->
-				<figure class="float-left col-md-6 col-sm-12">
+				<!-end fig-caption-->
+				<!--<figure class="float-left col-md-6 col-sm-12">
 					<img src="img/projects/react-bacon.png" />
 				</figure>
 			</div>
-			<!--end portoflio-link-->
+			end portoflio-link -->
 
 			<h4 class="homepage-subheader">-- Media 10 Portfolio --</h4>
 			<a class="portfolio-link gdl left" href="grand-designs-live">
