--- a/dev/index.html
+++ b/dev/index.html
@@ -77,7 +77,7 @@
 				</div>
 				<div class="back">
 					<div class="box2">
-						<img src="img/about/rob.jpg" class="lazy" />
+						<img src="img/about/rob.jpg" class="lazy" alt="photo of rob hern" />
 					</div>
 				</div>
 			</div>
@@ -101,7 +101,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-left col-md-6 col-sm-12">
-					<img src="img/projects/react-recipe.png" />
+					<img src="img/projects/react-recipe.png" alt="react recipe project" />
 				</figure>
 			</div>
 			<!--end portoflio-link-->
@@ -122,7 +122,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-right col-md-6 col-sm-12">
-					<img src="img/projects/react-spotify.png" />
+					<img src="img/projects/react-spotify.png" alt="react spotify project"/>
 				</figure>
 			</div>
 			<!--end portoflio-link-->
@@ -144,7 +144,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-left col-md-6 col-sm-12">
-					<img src="img/projects/react-pixa.png" />
+					<img src="img/projects/react-pixa.png" alt="react pixabay image search project" />
 				</figure>
 			</div>
 			<!--end portoflio-link-->
@@ -165,7 +165,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-right col-md-6 col-sm-12">
-					<img src="img/projects/portfolio-2018.png" />
+					<img src="img/projects/portfolio-2018.png" alt="portfolio 2018 project image"/>
 				</figure>
 			</div>
 			<!--end portoflio-link-->
@@ -187,7 +187,7 @@
 				</div>
 				<!-end fig-caption-->
 				<!--<figure class="float-left col-md-6 col-sm-12">
-					<img src="img/projects/react-bacon.png" />
+					<img src="img/projects/react-bacon.png" alt="bacon ipsum generator project image"/>
 				</figure>
 			</div>
 			end portoflio-link -->
@@ -207,7 +207,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-left col-md-6 col-sm-12">
-					<img src="img/projects/grand-designs-live-project.jpg" />
+					<img src="img/projects/grand-designs-live-project.jpg" alt="grand designs live project"/>
 				</figure>
 			</a>
 			<!--end portoflio-link-->
@@ -230,7 +230,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-right col-md-6 col-sm-12">
-					<img src="img/projects/this-morning-live-project.jpg" />
+					<img src="img/projects/this-morning-live-project.jpg" alt="this morning live project"/>
 				</figure>
 			</a>
 			<!--end portoflio-link-->
@@ -252,7 +252,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-left col-md-6 col-sm-12">
-					<img src="img/projects/uk-construction-week-project.jpg" />
+					<img src="img/projects/uk-construction-week-project.jpg" alt="uk construction week project"/>
 				</figure>
 			</a>
 			<!--end portoflio-link-->
@@ -277,7 +277,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-right col-md-6 col-sm-12">
-					<img src="img/projects/tom-dick-and-harrys-project.jpg" />
+					<img src="img/projects/tom-dick-and-harrys-project.jpg" alt="tom, dick and harrys project"/>
 				</figure>
 			</a>
 			<!--end portoflio-link-->
@@ -299,7 +299,7 @@
 				</div>
 				<!--end fig-caption-->
 				<figure class="float-left col-md-6 col-sm-12">
-					<img src="img/projects/west-kensington-design-district-project.jpg" />
+					<img src="img/projects/west-kensington-design-district-project.jpg" alt="west kensington design district design project" />
 				</figure>
 			</a>
 			<!--end portoflio-link-->
