--- a/dev/index.html
+++ b/dev/index.html
@@ -281,27 +281,27 @@
 				</figure>
 			</a>
 			<!--end portoflio-link-->
-			<a class="portfolio-link wkdd left" href="west-kensington-design-district">
+			<!-- <a class="portfolio-link wkdd left" href="west-kensington-design-district">
 				<div class="fig-caption col-md-6 col-sm-12">
 					<h2 class="port-title" data-hover="West Kensington Design District">West Kensington Design District</h2>
-					<p class="portfolio-desc">Site Design</p>
+					<p class="portfolio-desc">Site Design</p> -->
 					<!--           <div class="work-type-container">
             <span class="tooltipped" data-position="left" data-tooltip="Development"><i class="fas fa-code"></i></span>
             <span class="tooltipped" data-position="left" data-tooltip="Site Build"><i class="far fa-file-code"></i></span>
             <span class="tooltipped" data-position="left" data-tooltip="Design"><i class="fas fa-pencil-alt"></i></span>
           </div> -->
-					<div class="portfolio-tags"> <span>Adobe XD</span>
+					<!-- <div class="portfolio-tags"> <span>Adobe XD</span>
 						<span>UX/UI</span>
 						<span>HTML & CSS</span>
 						<span class="made-for">Media 10 Ltd</span>
 					</div>
 					<button class="viewMoreBtn">View Project</button>
-				</div>
+				</div> -->
 				<!--end fig-caption-->
-				<figure class="float-left col-md-6 col-sm-12">
+				<!-- <figure class="float-left col-md-6 col-sm-12">
 					<img src="img/projects/west-kensington-design-district-project.jpg" alt="west kensington design district design project" />
 				</figure>
-			</a>
+			</a> -->
 			<!--end portoflio-link-->
 		</section>
 		<h3>Experience</h3>
