--- a/dev/index.html
+++ b/dev/index.html
@@ -303,7 +303,31 @@
 				</figure>
 			</a> -->
 			<!--end portoflio-link-->
+
+			<a class="portfolio-link lil left" href="love-island-live">
+				<div class="fig-caption col-md-6 col-sm-12">
+					<h2 class="port-title" data-hover="Love Island Live">Love Island Live</h2>
+					<p class="portfolio-desc">Static Site Design & Build</p>
+					<div class="portfolio-tags">
+						<span>Adobe XD</span>
+						<span>HTML & CSS</span>
+						<span>SASS</span>
+						<span>JS & jQuery</span>
+						<a href="https://materializecss.com/" target="_blank">Materialize</a>
+						<a href="https://github.com/peacepostman/wavify" target="_blank">Wavify.js</a>
+						<span class="made-for">Media 10 Ltd</span>
+					</div>
+					<button class="viewMoreBtn">View Project</button>
+				</div>
+				<!--end fig-caption-->
+				<figure class="float-left col-md-6 col-sm-12">
+					<img src="img/projects/love-island-live-project.jpg" alt="love island live project" />
+				</figure>
+			</a>
+
+			<!--end portoflio-link -->
 		</section>
+
 		<h3>Experience</h3>
 		<section id="about">
 			<!-- TIMELINE-->
