adding Love Island Live

--- a/dev/index.html
+++ b/dev/index.html
@@ -292,8 +292,8 @@
 						<span>HTML & CSS</span>
 						<span>SASS</span>
 						<span>JS & jQuery</span>
-						<a href="https://materializecss.com/" target="_blank">Materialize</a>
-						<a href="https://github.com/peacepostman/wavify" target="_blank">Wavify.js</a>
+						<span>Materialize/ Bootstrap</span>
+						<span>Wavify.js</span>
 						<span class="made-for">Media 10 Ltd</span>
 					</div>
 					<button class="viewMoreBtn">View Project</button>
