adding new GIG position

--- a/dev/index.html
+++ b/dev/index.html
@@ -60,7 +60,7 @@
 				<div class="homeContent">
 					<div class="hover-container"> <a href="#about" id="nameHeading" class="anchor-tag"><h1>Rob Hern</h1></a>
 					</div>
-					<h2>I am a self-taught Front End Web Developer currently working at <span class="hover-container m10"><a class="m10link" target="_blank" href="https://media-ten.com/">Media 10 Ltd</a></span>across their portfolio of over 45 sites. I love building visually engaging sites focusing on clean, semantic code.</h2>
+					<h2>I am a self-taught Web Developer currently working at <span class="hover-container m10"><a class="m10link" target="_blank" href="http://thegoodideasgroup.com/">The Good Ideas Group</a></span> across their expansive portfolio of clients.</h2>
 					<div class="iconContainer2"> <a href="https://www.linkedin.com/in/roberthern/" target="_blank" class="btnlinkedin2 valign-wrapper tooltipped homeIcon" data-position="bottom" data-tooltip="Connect on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
 						<a href="mailto:robertjhern@gmail.com" class="btnenvelope2 valign-wrapper homeIcon tooltipped" data-position="bottom" data-tooltip="Email Me"><i class="far fa-envelope"></i></a>
 						<a href="http://github.com/robhern135" target="_blank" class="btngithub2 valign-wrapper homeIcon tooltipped" data-position="bottom" data-tooltip="View my Repos"><i class="fab fa-github"></i></a>
@@ -374,6 +374,15 @@
 							<p>Just 8 months into my time at Media 10 I dropped the Junior from my title and promoted to Front End Developer. I took on further responsibility into builds, larger scale projects such as entire site reskins, and worked closer with the studio and marketing departments.</p>
 						</div>
 					</div>
+					<div class="timeline-item">
+						<div class="timeline-img"><i class="fas fa-level-up-alt"></i>
+						</div>
+						<div class="timeline-content js--fadeInLeft">
+							<h2>Joining GIG</h2>
+							<div class="date">Sept 2018</div>
+							<p>I joined creative consultancy The Good Ideas Group (on my birthday, no less!) as their sole in house developer across their extensive portfolio of clients. Here I am continuing to build upon my skillset as rapidly as ever, adding Wordpress and further PHP development to my quiver.</p>
+						</div>
+					</div>
 				</div>
 				<!-- ABOUT ME-->
 				<div class="aboutMe col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12" id="aboutMe">
@@ -392,7 +401,7 @@
             </svg>
           </i>
 									<!--as of wed 25th july am-->
-									<p class="number">32</p>
+									<p class="number">35</p>
 									<p class="description">Hours of Yoga</p>
 									<p class="goal">Goal: 50</p>
 									<div class="progress-wrap">
@@ -419,7 +428,7 @@
 								</div>
 								<!--end stat-Item-->
 								<div class="stat-Item"> <i class="fas fa-tv"></i>
-									<p class="number">3</p>
+									<p class="number">4</p>
 									<p class="description">Netflix Originals Binged</p>
 									<p class="goal">Goal: 5</p>
 									<div class="progress-wrap">
@@ -437,7 +446,7 @@
 								</div>
 								<!--end stat-Item-->
 								<div class="stat-Item"> <i class="icons8-overwatch svgIcon"></i>
-									<p class="number">767</p>
+									<p class="number">837</p>
 									<p class="description">Overwatch Level Attained</p>
 									<p class="goal">Goal: 1000</p>
 									<div class="progress-wrap">
